--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "description": "Some of the tool approaches summarized during the development process",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/2990275358/fxl_utils.git"
   },
-  "bugs": "",
-  "main": "index.js",
+  "bugs": "https://github.com/2990275358/fxl_utils/issues",
+  "main": "dist/index.js",
+  "browser": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,5 +19,13 @@
     "localStorage",
     "pubsub"
   ],
-  "license": "ISC"
+  "license": "MIT",
+  "devDependencies": {
+    "rollup": "^4.6.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-typescript": "^1.0.1",
+    "tslib": "^2.6.2",
+    "typescript": "^5.3.2"
+  }
 }
