--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "main": "lib/index.js",
   "browser": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "pnpm rollup -c"
+    "test": "node ./test.js",
+    "build": "pnpm rollup -c",
+    "start": "pnpm rollup -c -w"
   },
   "keywords": [
     "utils",
@@ -23,12 +24,18 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.23.3",
+    "@babel/plugin-external-helpers": "^7.23.3",
+    "@babel/plugin-transform-runtime": "^7.23.4",
     "@babel/preset-env": "^7.23.3",
+    "@babel/runtime": "^7.23.4",
+    "@babel/runtime-corejs3": "^7.23.4",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.5",
     "rollup": "^4.6.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-typescript": "^1.0.1",
+    "rollup-plugin-babel": "^4.4.0",
     "tslib": "^2.6.2",
     "typescript": "^5.3.2"
   }
