--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   "keywords": [
     "utils",
     "array",
-    "localStorage",
-    "pubsub"
+    "localStorage"
   ],
   "license": "MIT",
   "devDependencies": {
